--- a/chess-engine/src/app/board/board.component.html
+++ b/chess-engine/src/app/board/board.component.html
@@ -1,5 +1,82 @@
 <div class="container">
     <img class="board" src="../../assets/images/board.jpg" alt="chess-board">
+
+    <!--------------------------------------------------------------------------------------------------------------->
+    
+    <img class="indicator" id="a1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <img class="indicator" id="a8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="b8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="c8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="d8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="e8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="f8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="g8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+    <img class="indicator" id="h8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
+
+    <!--------------------------------------------------------------------------------------------------------------->
+
     <img id="a2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
     <img id="b2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
     <img id="c2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
@@ -16,22 +93,22 @@
     <img id="f1-bishop" src="../../assets/images/white_bishop.png" alt="bishop">
     <img id="white-queen" src="../../assets/images/white_queen.png" alt="queen">
     <img id="white-king" src="../../assets/images/white_king.png" alt="king">
-    <img id="a7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="b7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="c7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="d7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="e7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="f7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="g7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="h7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
-    <img id="a8-rook" src="../../assets/images/black_rook.png" alt="rook">
-    <img id="h8-rook" src="../../assets/images/black_rook.png" alt="rook">
-    <img id="b8-knight" src="../../assets/images/black_knight.png" alt="knight">
-    <img id="g8-knight" src="../../assets/images/black_knight.png" alt="knight">
-    <img id="c8-bishop" src="../../assets/images/black_bishop.png" alt="bishop">
-    <img id="f8-bishop" src="../../assets/images/black_bishop.png" alt="bishop">
-    <img id="black-queen" src="../../assets/images/black_queen.png" alt="queen">
-    <img id="black-king" src="../../assets/images/black_king.png" alt="king">
+    <img class="black-piece" id="a7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="b7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="c7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="d7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="e7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="f7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="g7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="h7-pawn" src="../../assets/images/black_pawn.png" alt="pawn">
+    <img class="black-piece" id="a8-rook" src="../../assets/images/black_rook.png" alt="rook">
+    <img class="black-piece" id="h8-rook" src="../../assets/images/black_rook.png" alt="rook">
+    <img class="black-piece" id="b8-knight" src="../../assets/images/black_knight.png" alt="knight">
+    <img class="black-piece" id="g8-knight" src="../../assets/images/black_knight.png" alt="knight">
+    <img class="black-piece" id="c8-bishop" src="../../assets/images/black_bishop.png" alt="bishop">
+    <img class="black-piece" id="f8-bishop" src="../../assets/images/black_bishop.png" alt="bishop">
+    <img class="black-piece" id="black-queen" src="../../assets/images/black_queen.png" alt="queen">
+    <img class="black-piece" id="black-king" src="../../assets/images/black_king.png" alt="king">
 
     <!--------------------------------------------------------------------------------------------------------------->
 
